force-app/main/default/objects/ADM_Scrum_Team__c/fields/Capex_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Capex_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This team can mark User Stories and Tasks as Capital Expenditures</description>
    <inlineHelpText>This team can mark User Stories and Tasks as Capital Expenditures</inlineHelpText>
    <label>Capitalizable</label>
    <type>Checkbox</type>
</CustomField>