force-app/main/default/objects/ADM_Scrum_Team__c/fields/Capex_Lead__c.field-meta.xml
<CustomField>
    <fullName>Capex_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capitalization Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capex_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>