force-app/main/default/objects/ADM_Scrum_Team__c/fields/Chatter_Groups__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Groups__c</fullName>
    <inlineHelpText>Enter a list of Chatter Group IDs separated by commas (ie: 0F9B000000000qR, 0F9B000000000q2). The ID can be found in a Group&#39;s URL.

Valid IDs will be rendered into links to Chatter Groups.</inlineHelpText>
    <label>Chatter Groups</label>
    <type>TextArea</type>
</CustomField>