force-app/main/default/objects/ADM_Scrum_Team__c/fields/Cloud_LU__c.field-meta.xml
<CustomField>
    <fullName>Cloud_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud</label>
    <referenceTo>ADM_Cloud__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>