force-app/main/default/objects/ADM_Scrum_Team__c/fields/Colocation__c.field-meta.xml
<CustomField>
    <fullName>Colocation__c</fullName>
    <label>Colocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>