force-app/main/default/objects/ADM_Scrum_Team__c/fields/Copy_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Copy_Record_Type_Name__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Copy Record Type Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>