force-app/main/default/objects/ADM_Scrum_Team__c/fields/Definition_of_Ready__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Ready__c</fullName>
    <label>Definition of Ready</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>