force-app/main/default/objects/ADM_Scrum_Team__c/fields/Definition_of_Ready_Check__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Ready_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Definition of Ready Check</label>
    <type>Checkbox</type>
</CustomField>