force-app/main/default/objects/ADM_Scrum_Team__c/fields/Distribution_Lists__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Lists__c</fullName>
    <label>Distribution Lists</label>
    <type>TextArea</type>
</CustomField>