force-app/main/default/objects/ADM_Scrum_Team__c/fields/External_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Name__c</fullName>
    <externalId>true</externalId>
    <label>External Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>