force-app/main/default/objects/ADM_Scrum_Team__c/fields/Group_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>Group_ID_Link__c</fullName>
    <formula>IF( ISBLANK(Team_Email_Group_ID__c) , &#39;&#39;, HYPERLINK(&#39;/setup/own/groupdetail.jsp?id=&#39;+Team_Email_Group_ID__c+&#39;&amp;setupid=PublicGroups&#39;, Team_Email_Group_ID__c))</formula>
    <label>Group ID Link</label>
    <type>Text</type>
</CustomField>