force-app/main/default/objects/ADM_Scrum_Team__c/fields/Kanban__c.field-meta.xml
<CustomField>
    <fullName>Kanban__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kanban</label>
    <type>Checkbox</type>
</CustomField>