force-app/main/default/objects/ADM_Scrum_Team__c/fields/Parent_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Parent_Cloud__c</fullName>
    <formula>Cloud_LU__r.Parent_Cloud__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Cloud</label>
    <type>Text</type>
</CustomField>