force-app/main/default/objects/ADM_Scrum_Team__c/fields/PO_Certified__c.field-meta.xml
<CustomField>
    <fullName>PO_Certified__c</fullName>
    <description>Is Product Owner certified?</description>
    <formula>Product_Owner__r.Certified_Product_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Product Owner certified?</inlineHelpText>
    <label>PO Certified</label>
    <type>Checkbox</type>
</CustomField>