force-app/main/default/objects/ADM_Scrum_Team__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Owner_For_Team</relationshipName>
    <type>Lookup</type>
</CustomField>