force-app/main/default/objects/ADM_Scrum_Team__c/fields/Release_Coverage_Needed__c.field-meta.xml
<CustomField>
    <fullName>Release_Coverage_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether team needs to participate in release coverage</description>
    <label>Release Coverage Needed</label>
    <type>Checkbox</type>
</CustomField>