force-app/main/default/objects/ADM_Scrum_Team__c/fields/Rollup_Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Reporting_Group__c</fullName>
    <inlineHelpText>To be replaced with new Cloud mappings soon.</inlineHelpText>
    <label>Rollup Reporting Group TO BE DELETED</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>AppStore</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>IT Business Applications</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Public Websites</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Service &amp; Support</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>