force-app/main/default/objects/ADM_Scrum_Team__c/fields/Scrum_Master__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Master</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scrum_Master_For_Team</relationshipName>
    <type>Lookup</type>
</CustomField>