force-app/main/default/objects/ADM_Scrum_Team__c/fields/SM_Certified__c.field-meta.xml
<CustomField>
    <fullName>SM_Certified__c</fullName>
    <description>Is ScrumMaster certified?</description>
    <formula>Scrum_Master__r.Certified_Scrum_Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is ScrumMaster certified?</inlineHelpText>
    <label>SM Certified</label>
    <type>Checkbox</type>
</CustomField>