force-app/main/default/objects/ADM_Scrum_Team__c/fields/SM_more_than_one_team__c.field-meta.xml
<CustomField>
    <fullName>SM_more_than_one_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SM more than one team</label>
    <type>Checkbox</type>
</CustomField>