force-app/main/default/objects/ADM_Scrum_Team__c/fields/Status_Change_Notify__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Change Notify</label>
    <type>Checkbox</type>
</CustomField>