force-app/main/default/objects/ADM_Scrum_Team__c/fields/Team_Email_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Email_Group_ID__c</fullName>
    <label>Team Email Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>