force-app/main/default/objects/ADM_Scrum_Team__c/fields/Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>Team_Queue__c</fullName>
    <formula>HYPERLINK(&quot;p/own/Queue/d?id=&quot; &amp; Team_Queue_ID__c , Name &amp; &quot; Scrum Team&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Queue</label>
    <type>Text</type>
</CustomField>