force-app/main/default/objects/ADM_Scrum_Team__c/fields/Team_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Queue_ID__c</fullName>
    <label>Team Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>