force-app/main/default/objects/ADM_Scrum_Team__c/fields/Tenure_on_team__c.field-meta.xml
<CustomField>
    <fullName>Tenure_on_team__c</fullName>
    <label>One year tenure on team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>