force-app/main/default/objects/ADM_Scrum_Team__c/fields/Total_Dev__c.field-meta.xml
<CustomField>
    <fullName>Total_Dev__c</fullName>
    <label>Total Dev</label>
    <summaryFilterItems>
        <field>ADM_Scrum_Team_Member__c.Role__c</field>
        <operation>equals</operation>
        <value>Developer</value>
    </summaryFilterItems>
    <summaryForeignKey>ADM_Scrum_Team_Member__c.Scrum_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>