force-app/main/default/objects/ADM_Scrum_Team__c/fields/Total_Member_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Member_Allocation__c</fullName>
    <label>Total Member Allocation</label>
    <summarizedField>ADM_Scrum_Team_Member__c.Allocation__c</summarizedField>
    <summaryForeignKey>ADM_Scrum_Team_Member__c.Scrum_Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>