force-app/main/default/objects/ADM_Scrum_Team__c/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <label>Total Members</label>
    <summaryForeignKey>ADM_Scrum_Team_Member__c.Scrum_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>