force-app/main/default/objects/ADM_Scrum_Team__c/fields/Total_Members_with_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Members_with_Allocation__c</fullName>
    <formula>Total_Member_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Members with Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>