force-app/main/default/objects/ADM_Scrum_Team__c/fields/Total_QE_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_QE_Allocation__c</fullName>
    <label>Total QE Allocation</label>
    <summarizedField>ADM_Scrum_Team_Member__c.Allocation__c</summarizedField>
    <summaryFilterItems>
        <field>ADM_Scrum_Team_Member__c.Role__c</field>
        <operation>equals</operation>
        <value>QA Engineer</value>
    </summaryFilterItems>
    <summaryForeignKey>ADM_Scrum_Team_Member__c.Scrum_Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>