force-app/main/default/objects/ADM_Scrum_Team__c/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <inlineHelpText>The reason why this program exists. Ultimately what is this program accomplishing.</inlineHelpText>
    <label>Vision</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>