force-app/main/default/objects/ADM_Scrum_Team__c/recordTypes/Program.recordType-meta.xml
<RecordType>
    <fullName>Program</fullName>
    <active>true</active>
    <description>Used to create Program teams or Programs/Workgroups</description>
    <label>Program Team</label>
</RecordType>