force-app/main/default/objects/ADM_Scrum_Team__c/recordTypes/Scrum_Team.recordType-meta.xml
<RecordType>
    <fullName>Scrum_Team</fullName>
    <active>true</active>
    <description>Used to create teams of type scrum team</description>
    <label>Scrum Team</label>
</RecordType>