force-app/main/default/objects/ADM_Scrum_Team__c/validationRules/Cloud_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cloud_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Cloud__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Please specify the department this team belongs to.</errorMessage>
</ValidationRule>